# radiation-surface-setup-validation

./: .gitignore  README.md  algorithm-design.md  data-model-design.md  design-driven-development.md  math-design.md  pyproject.toml  requirements-spec.md  requirements.txt  setup-margin-research.md  test-design.md  ui-design.md
src/: allowance.py  app.py  decision.py  geometry.py  models.py  uncertainty.py
tests/: test_allowance.py  test_decision.py  test_geometry.py  test_uncertainty.py
