[project]
name = "radiation-surface-setup-validation"
version = "0.1.0"
description = "Setup margin allowance simulator for surface-guided radiation therapy"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "streamlit>=1.30",
    "pandas>=2.0",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
